[tool.poetry]
name = "iCaML-planning"
version = "0.1.0"
description = ""
authors = ["Rostyslav Hnatyshyn <rostyslav.hnatyshyn@gmail.com>"]
readme = "README.md"
packages=[{include="gvg_agents"},{include="iCaML"}]

[tool.poetry.dependencies]
python = [">=3.10,<3.12"]
numpy = "^1.26.4"
ipython = "^8.22.2"
scipy = "^1.12.0"
pillow = "^10.2.0"
matplotlib = "^3.8.3"
xlwt = "^1.3.0"
func-timeout = "^4.3.5"
pybullet = "^3.2.6"
stable_baselines3 = {extras=["extra"], version="2.3.1"}
sb3_contrib = "2.3.0"
rl_zoo3 = "2.3.0"
panda-gym = "3.0.7"
huggingface-sb3 = "^3.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.357"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
jupyter = "^1.0.0"
ipython = "^8.23.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
